PRJ3/AMK/BANAN.cydsn/BUILD-makaveli.log
--------------- Build Started: 11/17/2023 19:45:41 Project: BANAN, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\mikai\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\mikai\OneDrive - Aarhus universitet\3. Semester\Projekt 3 - Karaoke Maskinen\SOFTWARE\AMK\BANAN.cydsn\BANAN.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\mikai\OneDrive - Aarhus universitet\3. Semester\Projekt 3 - Karaoke Maskinen\SOFTWARE\AMK\BANAN.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0065: information: Analog terminal "ADC_SAR_1.vplus" on TopDesign is unconnected.
 * C:\Users\mikai\OneDrive - Aarhus universitet\3. Semester\Projekt 3 - Karaoke Maskinen\SOFTWARE\AMK\BANAN.cydsn\TopDesign\TopDesign.cysch (Signal: Net_69)
 * C:\Users\mikai\OneDrive - Aarhus universitet\3. Semester\Projekt 3 - Karaoke Maskinen\SOFTWARE\AMK\BANAN.cydsn\TopDesign\TopDesign.cysch (Shape_78.2)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 1 pin(s) will be assigned a location by the fitter: \ADC_SAR_1:Bypass(0)\
Analog Placement...
Info: apr.M0002: Analog signal "Net_69" is connected to one terminal only. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/RealOne.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c RealOne.c -o .\CortexM3\ARM_GCC_541\Debug\RealOne.o
RealOne.c: In function 'ReadADC':
RealOne.c:48:5: warning: implicit declaration of function 'ADC_DelSig_1_IsEndConversion' [-Wimplicit-function-declaration]
     ADC_DelSig_1_IsEndConversion(ADC_DelSig_1_WAIT_FOR_RESULT);
     ^
RealOne.c:48:34: error: 'ADC_DelSig_1_WAIT_FOR_RESULT' undeclared (first use in this function)
     ADC_DelSig_1_IsEndConversion(ADC_DelSig_1_WAIT_FOR_RESULT);
                                  ^
RealOne.c:48:34: note: each undeclared identifier is reported only once for each function it appears in
RealOne.c:49:12: warning: implicit declaration of function 'ADC_DelSig_1_GetResult16' [-Wimplicit-function-declaration]
     return ADC_DelSig_1_GetResult16(); // Get the result
            ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/17/2023 19:45:59 ---------------
